--- a/CSS_Folder/style.css
+++ b/CSS_Folder/style.css
@@ -12,6 +12,9 @@
   /* Page Sizing */
   min-height: 99.7vh;
 
+  /* Padding */
+  padding: 1rem 2rem;
+
   /* Borders */
   border: solid 1pt;
 
@@ -74,4 +77,78 @@ nav ul li a {
   writing-mode: vertical-rl;
   text-decoration: none;
   font-size: 1.25rem;
+}
+
+/* ========================== */
+/* SECTION POSTING FORMATTING */
+/* ========================== */
+.section-post {
+  /* Paddings and Margins */
+  padding: 0.25rem 2rem;
+  overflow-wrap: break-word;
+
+  /* Debug */
+  background-color: yellow;
+}
+
+.section-post header {
+  /* Borders */
+  border: solid 2.5pt;
+
+  /* Debug */
+}
+
+.section-post header h1 {
+  margin: 0;
+}
+
+.section-post header button {
+  /* Sizing */
+  height: 100%;
+  width: 100%;
+
+  /* Borders */
+  border: none;
+
+  /* Padding */
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.section-post article {
+  /* Debug */
+  border: solid 1.5pt;
+  border-top: solid 0.5pt;
+  padding: 0rem 1rem;
+  transition: all 1s;
+}
+
+.section-post article h2 {
+  /* Text Styling */
+  text-decoration: underline;
+}
+
+.references ul {
+  padding-left: 2%;
+}
+
+/* ========================== */
+/* COLLAPSE BUTTON FORMATTING */
+/* ========================== */
+.collapse {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+}
+.active,
+.collapse:hover {
+  background-color: #ccc;
+}
+
+.collapse-content {
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  background-color: #f1f1f1;
+
+  transition: opacity 1s ease-out;
 }
